--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "nikhil joshi",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1248.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
